tests/valid/conditional_expression/assign_ternary.rs
/*
return: 2
*/

main(): int {
    a: int = 0;
    a = 1 ? 2 : 3;
    return a;
}