tests/invalid/conditional_statements/mismatched_nesting.rs
/*
fail: 1
*/

main(): int {
    a: int = 0;
    if (1)
        return 1;
    else
        return 2;
    else
        return 3;
}